# intelligent_camera_trap

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TcfTransactionLog.csv  avr_serial.launch  cmake_install.cmake  index.html  mainpage.dox  manifest.xml  motor_branch.launch  motor_mock.launch  package.xml  params.json  setup.bash  setup.sh  setup.zsh  test.txt  viper.launch
BBB/: README  systemd_launch_file
BBB/remote_360/: remote_system.cpp
BBB/stm/: FSM_Class.py  FSM_helperFunctions.py  FSM_stateFunction.py  Main.py  TIME_currentTime.py  clock_init.sh  installer.sh  ninja.py  thread_vision.py
Duque_Hypervisor/: hypervisor_jan_2014.c
Duque_Hypervisor/HAL/: CFile1.c  MessagePrint.c  Timer.c  bbb.c  bbb_heartbeat.c  go_pro.c  port.c  shutdown.c  state.c  uart.c
Hypervisor/: Tutorial.atsln  Tutorial.atsuo
Hypervisor/AVR-IO/: Hypervisor.aps
Hypervisor/Bash Script/: cmd-poweroff.sh  cmd-suspend.sh  test-always-run.sh  test-no-heartbeat.sh  test-suspend-poweroff.sh  test-suspend-run.sh
Hypervisor/Tutorial/: .gitignore  Hypervisor.vpj  Hypervisor.vpw  Hypervisor.vpwhist  Hypervisor.vtg  Tutorial.cproj
Hypervisor/atmega/: main.c
Hypervisor/hypervisor_jan_2014/: hypervisor_jan_2014.c
Interpolation/: Interpolation.c  Interpolation.h
ML/mbed/: MLX620_API.cpp  MLX620_API.h  MLX620_EEPROM.h  MLX620_I2C.cpp  MLX620_I2C.h  MLX620_I2C_Device.h  MLX620_I2C_Driver.cpp  MLX620_I2C_Driver.h  MLX620_RAM.h  MLX620_Sensor.cpp  MLX620_Sensor.h  grid.cpp  grid.h  main.cpp  motor.cpp  motor.h  state.h  tracking.h
ML/scripts/: .melexis_debug.py.swp  Class-and-Sum-Variance.py  IR_Output_kMeans.py  IR_to_csv.py  Std-Dev-Difference-Based-Thresholding.py  analysis.py  coreTemp-filtering.py  labeledTraining.py  melexis_debug.py  sealab-celcius-real.csv  test.csv
Turret/: TcfTransactionLog.csv
Turret/NINJA_168/: NINJA_168.atsln  (+1 more)
catkin_generated/: 05.catkin-test-results.sh.develspace.context.py  env_cached.sh  generate_cached_env.develspace.context.py  generate_cached_env.py  generate_cached_setup.py  setup.develspace.context.py  setup.installspace.context.py  setup_cached.sh
cvPrototyping/: CameraTrapCV.py  bbb_2_sensors.c  bbb_2_sensors.h  bbb_i2c.c  bbb_i2c.h  display_2sensors  display_2sensors.cpp  ir_display  ir_display.cpp  remote_360.py  remote_system_DEBUG.cpp
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
gtest/: Makefile
include/: cv_localizer.cpp  cv_localizer.h
remote_360/: .remote_system.cpp.swp  Makefile  motor_controller.cpp  motor_controller.h  remote_system  remote_system.cpp
src/: .Camera_Capture.c.swp  .main.cpp.swp  CMakeLists.txt  Vibration_Node.cpp  Vibration_Node.cpp~  cv_service.cpp  flirROS.h  flirROS.h~  flirROSAdaptive.h  flirROSAdaptive.h~  karp.h  karp.h~  libcv_tracking.h  main.cpp  main.cpp~  node_cv.cpp  parameters.h  pseudo_node.cpp  utilities.h  utilities.h~
srv/: CvService.srv
wiki_images/: test.txt
(+201 files in other folders)
