<package>
  <name>CamTrap_Viper</name>
  <version>1.0.3</version> 
  <description>
     The software package for The Intelligent Camera Trap
  </description>

  <author>UCSD Engineers for Exploration (e4e.ucsd.edu)</author>
  <license>BSD</license>
  <url>http://github.com/ryeakle/CamTrap_Viper</url>
  <maintainer email="ryeakle@gmail.com">Riley Yeakle</maintainer> 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_geometry</build_depend> 
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  
	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>

</package>


